killerbunny/parsing/parser.py
#  File: parser.py
#  Copyright (c) 2025 Robert L. Ross
#  All rights reserved.
#  Open-source license to come.
#  Created by: Robert L. Ross
#
#


"""
Parses a stream of tokens and builds the AST for the evaluator.

Parser is an LL(2) recursive descent parser, although it only needs 2 token look-aheads in a handful of situations.

"""

import re
from typing import cast

from killerbunny.lexing.tokens import Token, TokenType, COMPARISON_OPERATORS_SET, \
    SEGMENT_START_TOKEN_TYPES, FILTER_QUERY_FIRST_SET, COMPARABLE_LITERAL_TYPES_SET, NUMBER_TYPES_SET, \
    JSON_KEYWORD_TOKEN_TYPES, TEST_EXPR_FIRST_SET, SINGULAR_QUERY_FIRST_SET
from killerbunny.parsing.function import get_registered_function, FunctionCallNode, FunctionNode, \
    FunctionArgument, FunctionParamType
from killerbunny.parsing.node_type import ASTNodeType, ASTNode
from killerbunny.parsing.parse_result import ParseResult
from killerbunny.parsing.parser_nodes import RepetitionNode, JsonPathQueryNode, \
    UnaryOpNode, BinaryOpNode, SegmentNode, RelativeQueryNode, RelativeSingularQueryNode, AbsoluteSingularQueryNode
from killerbunny.parsing.selector_nodes import SelectorNode, NameSelectorNode, \
    WildcardSelectorNode, SliceSelectorNode, IndexSelectorNode, FilterSelectorNode
from killerbunny.parsing.terminal_nodes import StringLiteralNode, MemberNameShorthandNode, \
    CurrentNodeIdentifier, RootNode, NumericLiteralNode, IdentifierNode, BooleanLiteralNode, \
    NullLiteralNode
from killerbunny.shared.constants import SUBPARSE_NAMES
from killerbunny.shared.errors import InvalidSyntaxError, Error, ValidationError, IllegalFunction
from killerbunny.shared.jpath_bnf import JPathBNFConstants as bnf
from killerbunny.shared.position import Position


####################################################################
# PARSER
####################################################################


class JPathParser:
    
    tokens: list[Token]
    token_index: int
    current_token: Token
    
    def __init__(self, tokens: list[Token]) -> None:
        self.tokens: list[Token] = tokens
        self.re_init()
        
    # noinspection PyAttributeOutsideInit
    def re_init(self) -> None:
        """Reset the parser state to initial conditions. List of Tokens remains the same passed to  __init__().
        todo - add optional paramater to this method to take a new list of Tokens? Then a parser instance could
        be reused as many times as the caller needs and avoid creating a new instance each time?
        """
        self.token_index = -1
        self.current_token: Token = Token.NO_TOKEN
        self.advance()
    
    def _update_current_token(self) -> None:
        """Set the self.current_token to the token at the current self.token_index element in the tokens list."""
        if self.token_index < len(self.tokens):
            self.current_token =  self.tokens[self.token_index]
        else:
            self.current_token =  Token.NO_TOKEN
    
    def advance(self) -> Token:
        self.token_index += 1
        # noinspection PyUnusedLocal
        # token_debug = self.current_token
        self._update_current_token()
        #print(f"advance: {token_debug} -> {self.current_token}")
        return self.current_token
    
    
    def backtrack(self, amount: int = 1) -> Token:
        """Back up the token_index by the argumeent value."""
        self.token_index -= amount
        self._update_current_token()
        return self.current_token
    
    
    def peek_next_token(self) -> Token:
        if self.token_index + 1 < len(self.tokens):
            return self.tokens[self.token_index + 1]
        else:
            return Token.NO_TOKEN
    
    def parse(self) -> ParseResult:
        res = ParseResult()
        node = res.register(self.start())
        if res.error: return res
        return res.success(node)
    
    def start(self) -> ParseResult:
        res = ParseResult()
        if self.current_token.token_type != TokenType.DOLLAR:
            # If the query doesn't start with '$'
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected '$', got {self.current_token.token_type}"))
        # jsonpath_query will parse the '$' and all its segments.
        # It will stop when no more segments can be formed from the subsequent tokens.
        jsonpath_query_ast_node = res.register(self.jsonpath_query())
        if res.error: return res
        if jsonpath_query_ast_node is None:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected jsonpath_query, got {self.current_token.token_type}"))
        if self.current_token.token_type != TokenType.EOF:  # type: ignore
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.position,
            f"Parser completed before EOF. Expected '.', '[' or '..', got {self.current_token.token_type}"))
        
        return res.success(jsonpath_query_ast_node)
    
    def subparse(self,
                 production_name: str = "all"
                 ) -> tuple[ list[ tuple[str, ASTNode] ] , list[ tuple[str, Error] ] ] :
        """Primarily a debugging method, used to parse grammar symbols other than "start". If no `prodution_name` is
        given, we try to parse all the symbol methods in the SUBPARSE_NAMES list. If a `production_name` is  provided,
        we try to parse just that method. We return the result(s) of  methods that don't produce a parse error.
        
        :return a tuple of two lists. The first list contains successful parsings, the second list contains
        the Errors for unsuccessful parsings. Each list element is a 2 item tuple, the first item is the name of the
        production symbol method attempted, (see  SUBPARSE_NAMES),
        the second item is the ASTNode for a successful parse, (first list) or the Error
        for an unsuccessful parse (second list).
        """
        method_names: list[str] = SUBPARSE_NAMES
        
        if production_name != "all":
            method_names = [production_name]  # caller specified a particular production rule to try to parse
            
        parsing_successes: list[ tuple[str, ASTNode ]] = []
        method_errors:     list[ tuple[str, Error ]] = []
        
        for method_name in method_names:
            self.re_init()  # reset parsing state to start of token list
            method = getattr(self, method_name, self.no_method)
            # noinspection PyAttributeOutsideInit
            self.method_name = method_name  # this assignment is just for the error message in no_method()
            res = method()
            if not res.error and res.node and self.current_token.token_type == TokenType.EOF:  # parsed entire text with no errors
                parsing_successes.append( ( method_name, res.node ) )
            elif res.error:
                method_errors.append( (method_name, res.error) )
            elif res.node:
                # parsing succeeded with leftover tokens.
                #parsing_successes.append( ( method_name, res.node ) )
                current_token: Token = self.current_token  # parsing stopped here
                last_token = self.tokens[-1]
                error = Error(
                    Position( current_token.position.text, current_token.position.start, last_token.position.end),
                    f"{method_name}: No EOF","Parsing completed before EOF",
                )
                method_errors.append( (method_name, error) )
            
        return parsing_successes, method_errors
    
    
    def no_method(self) -> ParseResult:
        raise Exception(f"No {self.method_name} method defined")
    ####################################################################
    
    
    def jsonpath_query(self) -> ParseResult:
        """
        jsonpath_query  ::=  "$" ( segment )*
        """
        res = ParseResult()
        if self.current_token.token_type != TokenType.DOLLAR:
            return res.failure(InvalidSyntaxError(
                self.current_token.position,
                f"Expected '$', found '{self.current_token.token_type}'"))
        
        root_node_token = self.current_token
        res.register_advancement()
        self.advance() # Consume '$'
        root_node = RootNode(root_node_token)
        if self.current_token.token_type == TokenType.EOF:  # type: ignore
            # this query only consists of the root node identifier
            return res.success(JsonPathQueryNode(root_node,
                                                 RepetitionNode(ASTNodeType.SEGMENTS,
                                                                [],
                                                                ASTNodeType.SEGMENT)))
        
        segments_repetition_node = res.register(self.segments())
        if res.error: return res # Propagate error
        if segments_repetition_node is None:
            # This case should ideally be covered if segments() returns an error
            # when it can't produce a node.
            return res.failure(InvalidSyntaxError(
                self.current_token.position,
                f"Segments parsing returned no node but without an error. current token: "
                f"{self.current_token.token_type}"
            ))
        
        jsonpath_query_node = JsonPathQueryNode(root_node, cast(RepetitionNode,segments_repetition_node))
        return res.success(jsonpath_query_node)
    
    
    ####################################################################
    # SEGMENTS
    ####################################################################
    
    def segments(self) -> ParseResult:
        """Parses zero or more segment productions.
        Assumes the initial token (e.g., '$' or '@') has already been consumed.
        
        segments  ::=  ( segment )*
        
        """
        res = ParseResult()
        segments_nodes: list[ASTNode] = []
        is_singular: bool = True  # set to False at the first identification of a non-singular segment
        segment_node: SegmentNode
        while self.current_token.token_type in SEGMENT_START_TOKEN_TYPES:
            saved_token = self.current_token
            segment_node = cast(SegmentNode, res.register(self.segment())) # self.segment() will advance tokens
            if res.error:
                return res
            if segment_node is None:
                return res.failure(InvalidSyntaxError(saved_token.position,
                                            f"Expected to parse a Segment, got '{saved_token.token_type}'" ))
            
            # Determine if this segment is a Singular segment or not. We're only storing this information in the
            # returned RepititionNode for the SEGMENTS. If we need to store this in the individual segments as well,
            # we can push this code down into each self.segment() call.
            if segment_node.node_type is ASTNodeType.DESCENDANT_SEGMENT:
                is_singular = False
            # if any selectors in the segment are not INDEX_SELECTOR nor NAME_SELECTOR, it's not a singular segment
            if is_singular:  # no need to test again once we know it's not a singular segment
                if len(segment_node.selectors) > 1:
                    is_singular = False
            if is_singular:
                for selector in segment_node.selectors:
                    if not isinstance(selector, (NameSelectorNode, IndexSelectorNode)):
                        is_singular = False
                        break  # short circuit
            
            segments_nodes.append(segment_node)
        
        # Return the list of parsed segment ASTNodes directly.
        # The caller (jsonpath_query or rel_query) can modify the NodeType as needed for more specificity
        return res.success(RepetitionNode(ASTNodeType.SEGMENTS, segments_nodes, ASTNodeType.SEGMENT, is_singular))
    
    
    
    def segment(self) -> ParseResult:
        """
        segment  ::=  child_segment |
                      descendant_segment
        """
        res = ParseResult()
        if self.current_token.token_type == TokenType.DOUBLE_DOT:
            # start of descendant_segment
            descendant_segment = res.register(self.descendant_segment())
            if res.error: return res
            return res.success(descendant_segment)
        
        child_segment = res.register(self.child_segment())
        if res.error: return res
        return res.success(child_segment)
    
    def child_segment(self) -> ParseResult:
        """
        child_segment   ::=     bracketed_selection |
                                "." ( "*" | member_name_shorthand:IDENTIFIER )
        
        """
        res = ParseResult()
        if self.current_token.token_type == TokenType.LBRACKET:
            bs = res.register(self.bracketed_selection())
            if res.error: return res
            return res.success(SegmentNode(ASTNodeType.CHILD_SEGMENT, cast(RepetitionNode, bs)))
        
        if self.current_token.token_type != TokenType.DOT:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected [ or . but got {self.current_token}"))
        
        res.register_advancement()
        self.advance()  # consume '.'
        
        saved_token = self.current_token
        node: ASTNode | None = None
        if self.current_token.token_type == TokenType.STAR: # type: ignore
            wc:WildcardSelectorNode = cast(WildcardSelectorNode,res.register(self.wildcard_selector()))
            if res.error: return res
            # we want to convert dot-wildcard into a BracketedSelectorNode ( .* ->  [*] ) for normalization
            node = self._convert_to_bracketed_selection(wc)
        elif self.current_token.token_type in  (TokenType.IDENTIFIER, *JSON_KEYWORD_TOKEN_TYPES ):
            mns:MemberNameShorthandNode = cast(MemberNameShorthandNode,res.register(self.member_name_shorthand()))
            if res.error: return res
            # convert member_name_shorthand to a bracketed name-selector ( .foo -> ["foo"] ) for normalization
            node = self._convert_to_bracketed_selection(mns)
        
        if node is not None: return res.success(SegmentNode(ASTNodeType.CHILD_SEGMENT, cast(RepetitionNode, node)))
        return res.failure(InvalidSyntaxError(self.current_token.position,
                                              f"Expected '.', '*', or identifier, but got '{saved_token.token_type}'" ))
    
    @staticmethod
    def _convert_to_bracketed_selection(node: WildcardSelectorNode | MemberNameShorthandNode) -> RepetitionNode:
        """Convert the argument ASTNode into a BracketedSelectionNode for normalization."""
        selector_list: list[SelectorNode] = []
        if isinstance(node, WildcardSelectorNode):
            selector_list.append(node)
        elif isinstance(node, MemberNameShorthandNode):
            # convert shorthand to a bracketed name-selector
            # extract the Token from the member_name_shorthand and convert it to a STRING token type
            token = node.token.copy()
            token._token_type = TokenType.STRING
            token._value = "'" + token.value + "'" # string literals are quoted, here we normalize single quotes
            new_node = NameSelectorNode(token)
            selector_list.append(new_node)
        else:
            raise TypeError(f"Unexpected ASTNode type {type(node)}")
        
        rep_node = RepetitionNode(ASTNodeType.BRACKETED_SELECTION, cast(list[ASTNode], selector_list), ASTNodeType.SELECTOR)
        return rep_node
    
    
    def descendant_segment(self) -> ParseResult:
        """
        descendant_segment  ::=  ".."  ( bracketed_selection | "*" | member_name_shorthand:IDENTIFIER )
        
        :return:
        """
        res = ParseResult()
        if self.current_token.token_type != TokenType.DOUBLE_DOT:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected .. but got {self.current_token}"))
        
        res.register_advancement()
        self.advance()
        
        if TokenType.LBRACKET == self.current_token.token_type:  # type: ignore
            bs:RepetitionNode = cast(RepetitionNode, res.register(self.bracketed_selection()))
            if res.error: return res
            if bs is not None:
                node = SegmentNode(ASTNodeType.DESCENDANT_SEGMENT, bs)
                return res.success(node)
        
        if self.current_token.token_type == TokenType.STAR: # type: ignore
            wc:WildcardSelectorNode = cast(WildcardSelectorNode,res.register(self.wildcard_selector()))
            if wc is not None:
                node = SegmentNode(ASTNodeType.DESCENDANT_SEGMENT, self._convert_to_bracketed_selection(wc))
                return res.success(node)
        
        if self.current_token.is_identifier():
            identifier:MemberNameShorthandNode = cast(MemberNameShorthandNode, res.register(self.member_name_shorthand()))
            # convert shorthand to a bracketed name-selector
            if identifier is not None:
                node = SegmentNode(ASTNodeType.DESCENDANT_SEGMENT, self._convert_to_bracketed_selection(identifier))
                return res.success(node)
                
        return res.failure(InvalidSyntaxError(self.current_token.position,
                                              f"Expected '[', '*', or identifier, got '{self.current_token.token_type }'"))
    
    
    def member_name_shorthand(self) -> ParseResult:
        """Assumes current token type is TokenType.IDENTIFIER.
       
        member_name_shorthand:IDENTIFIER
       
        :return:
        """
        res = ParseResult()
        if self.current_token.token_type not in (TokenType.IDENTIFIER , *JSON_KEYWORD_TOKEN_TYPES):
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected identifier, got {self.current_token.token_type}"))
        
        node = MemberNameShorthandNode(self.current_token)
        res.register_advancement()
        self.advance()
        
        return res.success(node)

    
    def bracketed_selection(self) -> ParseResult:
        """
        bracketed_selection ::= "[" selector ( "," selector)* "]"
        
        :return:
        """
        res = ParseResult()
        
        selector_list: list[ASTNode] = []
        if TokenType.LBRACKET != self.current_token.token_type:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected '[', found {self.current_token}"))
        res.register_advancement()
        self.advance()
        # must have at least one selector per the grammar
        first_selector = res.register(self.selector())
        if first_selector is None and TokenType.RBRACKET == self.current_token.token_type:  # type: ignore
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected at least one selector, got empty selector list [] "))
        elif first_selector is None :
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected at least one selector, got '{self.current_token.token_type}'"))
        selector_list.append(first_selector)
        
        # maybe more comma-delimited selectors follow
        # type ignore  is needed here because MyPy doesn't know that advance() or selector() change
        # the value of self.current_token
        while TokenType.COMMA == self.current_token.token_type:  # type: ignore
            res.register_advancement()
            self.advance()  # consume the comma
            selector_ = res.register(self.selector())
            if res.error: return res
            if selector_:
                selector_list.append(selector_)
        
        # finished with optional selectors, look for the closing ]
        if TokenType.RBRACKET != self.current_token.token_type: # type: ignore
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected ',' or ']', found {self.current_token.token_type}"))
        res.register_advancement()
        self.advance()
        rep_node = RepetitionNode(ASTNodeType.BRACKETED_SELECTION, selector_list, ASTNodeType.SELECTOR)
        return res.success(rep_node)
    
    
    ####################################################################
    # SELECTORS
    ####################################################################
    
    
    def selector(self) -> ParseResult:
        """
        selector    ::=     name_selector:STRING_LITERAL |
                            "*" |
                            slice_selector |
                            index_selector:INT_LITERAL |
                            filter_selector
        """
        res = ParseResult()
        token = self.current_token
        node: ASTNode | None = None
        if token.token_type == TokenType.STRING:
            node = res.register(self.name_selector())
        elif token.token_type == TokenType.STAR:
            node = res.register(self.wildcard_selector())
        elif token.token_type == TokenType.SLICE:
            node = res.register(self.slice_selector())
        elif token.token_type == TokenType.INT:
            node = res.register(self.index_selector())
        elif token.token_type == TokenType.QMARK:
            node = res.register(self.filter_selector())
            
        if res.error: return res
        
        if node is not None:
            return res.success(node)
        
        else:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected selector, got '{token.token_type}'"
                                                  ))
    
    
    def name_selector(self) -> ParseResult:
        """Assumes current token is name-selector (string literal)."""
        res = ParseResult()
        if self.current_token.token_type != TokenType.STRING:
            return res.failure(
                InvalidSyntaxError(self.current_token.position,
                            f"Expected string literal, got '{self.current_token.token_type}'"))
        node = NameSelectorNode(self.current_token)
        res.register_advancement()
        self.advance()
        return res.success(node)
    
    
    def wildcard_selector(self) -> ParseResult:
        """Assumes current token is wildcard-selector (*). """
        res = ParseResult()
        if self.current_token.token_type != TokenType.STAR:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected '*', got '{self.current_token.token_type}'))"))
        node = WildcardSelectorNode(self.current_token)
        res.register_advancement()
        self.advance()
        return res.success(node)
    
    def slice_selector(self) -> ParseResult:
        """Assumes current token is slice-selector . """
        res = ParseResult()
        match = re.match(bnf.SLICE_SELECTOR, self.current_token.value)
        if not match:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                            f"Expected slice-selector, got '{self.current_token.token_type}'"))
        
        start: int | None = int(match.group("start")) if match.group("start") else None
        end:   int | None = int(match.group("end"))   if match.group("end")   else None
        step:  int | None = int(match.group("step"))  if match.group("step")  else None
        try:
            node = SliceSelectorNode(self.current_token, start, end, step)
        except IndexError as ie:
            return res.failure(ValidationError(self.current_token.position, str(ie) ))
        res.register_advancement()
        self.advance()
        return res.success(node)
    
    
    def index_selector(self) -> ParseResult:
        """
        Assumes current token is index selector (int literal).
        
        index_selector:INT_LITERAL
        
        :return:
        """
        res = ParseResult()
        if self.current_token.token_type != TokenType.INT:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                        f"Expected int literal, got '{self.current_token.token_type}'"))
        node = IndexSelectorNode(self.current_token)
        res.register_advancement()
        self.advance()
        return  res.success(node)
    
    
    def filter_selector(self) -> ParseResult:
        """Assumes current token is question mark (?).
        
        filter_selector  ::=  "?" logical_expr
        
        :return:
        """
        res = ParseResult()
        if self.current_token.token_type != TokenType.QMARK:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected '?', got {self.current_token.token_type}"))
        res.register_advancement()
        self.advance()
        
        node = res.register(self.logical_expr())
        if res.error: return res
        
        if node is None:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected logical_expr, got {self.current_token.token_type}"))
        
        return res.success(FilterSelectorNode(node))
        
    
    ####################################################################
    # LOGICAL EXPR
    ####################################################################
    
    def logical_expr(self) -> ParseResult:
        """
        
        logical_expr  ::= logical_or_expr
        
        """
        res = ParseResult()
        logexpr_node = res.register(self.logical_or_expr())
        if res.error: return res
        if logexpr_node is None:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected logical_or_expr, got {self.current_token.token_type}"))
                
        return res.success(logexpr_node)
    
    def logical_or_expr(self) -> ParseResult:
        """
        disjunction, binds less  tightly than conjuntion
        
        logical_or_expr  ::=  logical_and_expression ( "||" logical_and_expression )*
        
        :return:
        """
        """
        Implementation detail:
            We use a list for the concatenated logical_and_expressions instead of nested nodes so that we can use
            short-circuit logic at the top level. If any list members evaluate to True,
            the entire logical_or_expr is True.
        """
        res = ParseResult()
        and_expr_list: list[ASTNode] = []
        node = res.register(self.logical_and_expr())
        if res.error: return res
        if node is None:
            return res.failure(
                InvalidSyntaxError(self.current_token.position,
                                   f"Expected logical_and_expr, got {self.current_token.token_type}" ))
        and_expr_list.append(node)
        
        # maybe more '||'-delimited logical_and_expressions follow
        while TokenType.OR == self.current_token.token_type:
            res.register_advancement()
            self.advance()  # consume the '||'
            node = res.register(self.logical_and_expr())
            if res.error: return res
            if node is None:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.position,
                        f"Expected logical_and_expr after '||', got {self.current_token.token_type}"
                    ))
            and_expr_list.append(node)
        
        if len(and_expr_list) == 1:
            # no need to wrap this single node in a RepetitionNode
            logical_or_expr_node = and_expr_list[0]
        else:
            logical_or_expr_node = RepetitionNode(ASTNodeType.LOGICAL_OR_EXPR, and_expr_list, ASTNodeType.LOGICAL_AND_EXPR)
        return res.success(logical_or_expr_node)
        #return res.success(SingleNodeContainer(log_and_exprs, NodeType.LOGICAL_OR_EXPR))
    
    def logical_and_expr(self) -> ParseResult:
        """
        conjunction, binds more tightly than disjunction
        
        logical_and_expr  ::=  basic_expr ( "&&" basic_expr )*
        
        :return:
        """
        
        """
        Implementation detail:
            We use a list for the concatenated basic_exprs instead of nested Nodes so that we can use short-circuit logic
            at the top level. If any list members evaluate to False, the entire logical_and_expr is False.
        """
        # todo this concatenation pattern has appeared several times now. perhaps refactor to a common method:
        #   concat_production(token_type, prod_func, error_msg)
        res = ParseResult()
        basic_expr_list: list[ASTNode] = []
        node = res.register(self.basic_expr())
        if res.error: return res
        if node is None:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                                  f"Expected basic_expr, got {self.current_token.token_type}"))
        basic_expr_list.append(node)
        # maybe more '&&'-delimited logical_and_expressions follow
        while TokenType.AND == self.current_token.token_type:
            res.register_advancement()
            self.advance()  # consume the '&&'
            node = res.register(self.basic_expr())
            if res.error: return res
            if node is None:
                return res.failure(
                    InvalidSyntaxError(self.current_token.position,
                                       f"Expected basic_expr after '&&', got {self.current_token.token_type}"))
            else:
                basic_expr_list.append(node)
        
        if len(basic_expr_list) == 1:
            # no need to wrap this single node in a RepetitionNode
            basic_exprs = basic_expr_list[0]
        else:
            basic_exprs = RepetitionNode(ASTNodeType.LOGICAL_AND_EXPR, basic_expr_list, ASTNodeType.BASIC_EXPR)
        # return res.success(SingleNodeContainer(basic_exprs, NodeType.LOGICAL_AND_EXPR))
        return res.success(basic_exprs)
    
    def basic_expr(self) -> ParseResult:
        """
        
        basic_expr ::= paren_expr | comparison_expr | test_expr
        
        :return:
        """
        res = ParseResult()
        if self.current_token.token_type == TokenType.NOT:
            # next symbol is either paren_expr or test_expr
            if self.peek_next_token().token_type == TokenType.LPAREN:
                node = res.register(self.paren_expr())
                if res.error: return res
                return res.success(node)
            else:
                node = res.register(self.test_expr())
                if res.error: return res
                return res.success(node)

        # no not symbol ( ! ), which means it could be any of the three (paren_expr, comparison_expr, test_expr)
        token_type = self.current_token.token_type
        if token_type == TokenType.LPAREN:
            node = res.register(self.paren_expr())
            if res.error: return res
            return res.success(node)
        
        # try parsing comparison_expr
        # if parsing comparison_expr() fails, we need to reset the token index to its value at this point so we can
        # try parsing test_expr next
        node = res.try_register(self.comparison_expr())
    
        if res.error is None and node is not None:
            return res.success(node)
        
        # if the comparison_expr failed, it may just mean it wasn't a comparison_expr. We'll clear the error so we can
        # try to parse a test_expr(). If that fails too it's ambiguous as to which production was intended.
        self.backtrack(res.to_reverse_count)
        res.error = None

        if self.current_token.token_type in TEST_EXPR_FIRST_SET or self.is_start_of_function_expr():
            # if the token_type is IDENTIFIER followed by LPAREN, we have basic_expr -> test_expr -> function_expr
            # otherwise the identifier might just be a member-name-shorthand or JSON keyword like true, false, null
            node = res.register(self.test_expr())
            if res.error: return res
            if node is not None:
                return res.success(node)
                

        """
        first set for comparison_expr:
        
        comparison_expr  ::=  comparable ( "=="  |  "!="  |  "<="  |  ">="  |  "<"  |  ">")  comparable
        
        comparable  ::=  singular_query |    ; singular query value
                         function_expr  |    ; ValueType
                         literal
                         
        singluar_query          ::=     rel_singular_query | abs_singluar_query
        function_expr           ::=     function_name:IDENTIFIER "(" [ function_argument ( "," function_argument )* ] ")"
        rel_singular_query      ::=     "@" singular_query_segments
        abs_singular_query      ::=     "$" singular_query_segments

        literal
        IDENTIFIER
        @
        $
        """

        """"
        first set for test_expr:
        test_expr               ::=     [ "!" ] ( filter_query | function_expr )
        
        filter_query            ::=     rel_query | jsonpath_query
        function_expr           ::=     function_name:IDENTIFIER "(" [ function_argument ( "," function_argument )* ] ")"
        
        rel_query               ::=     "@" segments
        jsonpath_query          ::=     "$" segments
        
        function_name:IDENTIFIER (
        "@" segments
        "$" segments
        """

        
        return res.failure(
            InvalidSyntaxError(self.current_token.position,
                    f"Expected paren_expr, comparison_expr or test_expr, got {self.current_token.token_type}"))
    
    
    def paren_expr(self) -> ParseResult:
        """
        paren_expr  ::=  [ "!" ] "(" logical_expr ")"
        
        :return:
        """
        res = ParseResult()
        # we can store the optional "not" operator in the ParenExprNode, which will negate the entire nested logical_expr
        # or have a NotOpNode that takes one nested ASTNode of ParenExprNode | TestExprNode
        not_flag = False
        not_token = self.current_token
        if self.current_token.token_type == TokenType.NOT:
            not_flag = True
            res.register_advancement()
            self.advance()
        
        
        logical_expr_node: ASTNode | None
        if self.current_token.token_type != TokenType.LPAREN:
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                           f"Expected '(', got {self.current_token.token_type}"))
        res.register_advancement()
        self.advance()
        logical_expr_node = res.register(self.logical_expr())
        if res.error: return res
        if logical_expr_node is None:
            return res.failure(
                InvalidSyntaxError(self.current_token.position,
                        f"logical_expr_node is None, current token: {self.current_token.token_type}"
            ))
        if self.current_token.token_type != TokenType.RPAREN:  # type: ignore
            return res.failure(InvalidSyntaxError(self.current_token.position,
                                           f"Expected ')', got {self.current_token.token_type}"))
        res.register_advancement()
        self.advance()
        
        inner_node: ASTNode
        if not_flag:
            result_node = UnaryOpNode(logical_expr_node, ASTNodeType.LOGICAL_NOT, not_token)
        else:
            result_node = logical_expr_node
            
        # result_node = SingleNodeContainer(inner_node, ASTNodeType.PAREN_EXPR)
        
        return res.success(result_node)
    
    
    def comparison_expr(self) -> ParseResult:
        """
        comparison_expr  ::=  comparable ( "=="  |  "!="  |  "<="  |  ">="  |  "<"  |  ">")  comparable
        
        :return:
        """
        res = ParseResult()
        left_node = res.register(self.comparable())
        if res.error: return res
        if left_node is None:
            return res.failure(
                InvalidSyntaxError(self.current_token.position,
                        f"Comparison_expr: couldn't parse left comparable, current token: {self.current_token.token_type}"))

        
        if self.current_token.token_type not in COMPARISON_OPERATORS_SET:
            return res.failure(
                InvalidSyntaxError(self.current_token.position,
                    f"Expected '==', '!=', '<=', '>=', '<', '>', got {self.current_token.token_type}"))
